--- a/src/components/Details/index.scss
+++ b/src/components/Details/index.scss
@@ -6,6 +6,7 @@
   height: 100%;
   overflow-y: auto;
   background: #fff;
+  -webkit-overflow-scrolling: touch;
   .top {
     height: 0.9rem;
     .fix {
