--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -5,7 +5,7 @@
 #home{
   position: relative;
   height: 100%;
-  overflow-y: auto;
+  // overflow-y: auto;
   overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
 }
